commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.datavalidationerroralert.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.datavalidationerroralert.yml
@@ -1,89 +1,78 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 015e6d1216af1a80b75dc332da769dc5d7718c11
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116988"
 items:
-- uid: excel_release.Excel.DataValidationErrorAlert
-  summary: >-
-    表示数据验证的错误警报属性。
+  - uid: excel_release.Excel.DataValidationErrorAlert
+    summary: |-
+      表示数据验证的错误警报属性。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.DataValidationErrorAlert
+    fullName: Excel.DataValidationErrorAlert
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.DataValidationErrorAlert.message
+      - excel_release.Excel.DataValidationErrorAlert.showAlert
+      - excel_release.Excel.DataValidationErrorAlert.style
+      - excel_release.Excel.DataValidationErrorAlert.title
+  - uid: excel_release.Excel.DataValidationErrorAlert.message
+    summary: |-
+      表示错误警报消息。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.DataValidationErrorAlert
-  fullName: Excel.DataValidationErrorAlert
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.DataValidationErrorAlert.message
-  - excel_release.Excel.DataValidationErrorAlert.showAlert
-  - excel_release.Excel.DataValidationErrorAlert.style
-  - excel_release.Excel.DataValidationErrorAlert.title
-- uid: excel_release.Excel.DataValidationErrorAlert.message
-  summary: >-
-    表示错误警报消息。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: message
+    fullName: message
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'message: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.DataValidationErrorAlert.showAlert
+    summary: |-
+      确定在用户输入无效数据时是否显示错误警报对话框。 默认值为 true。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showAlert
+    fullName: showAlert
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showAlert: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.DataValidationErrorAlert.style
+    summary: |-
+      表示数据有效性警报类型，有关详细信息，请参阅 Excel.DataValidationAlertStyle。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: message
-  fullName: message
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'message: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.DataValidationErrorAlert.showAlert
-  summary: >-
-    确定在用户输入无效数据时是否显示错误警报对话框。 默认值为 true。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style: Excel.DataValidationAlertStyle | "Stop" | "Warning" | "Information";'
+      return:
+        type:
+          - Excel.DataValidationAlertStyle | "Stop" | "Warning" | "Information"
+  - uid: excel_release.Excel.DataValidationErrorAlert.title
+    summary: |-
+      表示错误警报对话框标题。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showAlert
-  fullName: showAlert
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showAlert: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.DataValidationErrorAlert.style
-  summary: >-
-    表示数据有效性警报类型，有关详细信息，请参阅 Excel.DataValidationAlertStyle。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style: Excel.DataValidationAlertStyle | "Stop" | "Warning" | "Information";'
-    return:
-      type:
-      - Excel.DataValidationAlertStyle | "Stop" | "Warning" | "Information"
-- uid: excel_release.Excel.DataValidationErrorAlert.title
-  summary: >-
-    表示错误警报对话框标题。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: title
-  fullName: title
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'title: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: title
+    fullName: title
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'title: string;'
+      return:
+        type:
+          - string
