--- a/docs/docs-ref-autogen/outlook_1_4/office.mailboxenums.recipienttype.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.mailboxenums.recipienttype.yml
@@ -1,58 +1,51 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 41286314a7e58d920d0dea8d57655f389f0a1a29
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30096764"
 items:
-- uid: Outlook_1_4.Office.MailboxEnums.RecipientType
-  summary: >-
-    <span data-ttu-id="d9772-101">指定约会收件人的类型。</span><span class="sxs-lookup"><span data-stu-id="d9772-101">Specifies the type of recipient for an appointment.</span></span>
+  - uid: Outlook_1_4.Office.MailboxEnums.RecipientType
+    summary: |-
+      <span data-ttu-id="a1eff-101">指定约会收件人的类型。</span><span class="sxs-lookup"><span data-stu-id="a1eff-101">Specifies the type of recipient for an appointment.</span></span>
 
-
-    <span data-ttu-id="d9772-102">\[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9772-102">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="d9772-103">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="d9772-103">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="d9772-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="d9772-104">Compose or Read</span></span></td></tr> </table>
-  name: Office.MailboxEnums.RecipientType
-  fullName: Office.MailboxEnums.RecipientType
-  langs:
-  - typeScript
-  type: enum
-  package: Outlook_1_4
-  children:
-  - Outlook_1_4.Office.MailboxEnums.RecipientType.DistributionList
-  - Outlook_1_4.Office.MailboxEnums.RecipientType.ExternalUser
-  - Outlook_1_4.Office.MailboxEnums.RecipientType.Other
-  - Outlook_1_4.Office.MailboxEnums.RecipientType.User
-- uid: Outlook_1_4.Office.MailboxEnums.RecipientType.DistributionList
-  summary: <span data-ttu-id="d9772-105">指定收件人是包含电子邮件地址列表的通讯组列表。</span><span class="sxs-lookup"><span data-stu-id="d9772-105">Specifies that the recipient is a distribution list containing a list of email addresses.</span></span>
-  name: DistributionList
-  fullName: DistributionList
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"distributionList\""
-- uid: Outlook_1_4.Office.MailboxEnums.RecipientType.ExternalUser
-  summary: <span data-ttu-id="d9772-106">指定收件人不是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="d9772-106">Specifies that the recipient is an SMTP email address that is not on the Exchange server.</span></span>
-  name: ExternalUser
-  fullName: ExternalUser
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"externalUser\""
-- uid: Outlook_1_4.Office.MailboxEnums.RecipientType.Other
-  summary: <span data-ttu-id="d9772-107">指定收件人不是其他收件人类型之一。</span><span class="sxs-lookup"><span data-stu-id="d9772-107">Specifies that the recipient is not one of the other recipient types.</span></span>
-  name: Other
-  fullName: Other
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"other\""
-- uid: Outlook_1_4.Office.MailboxEnums.RecipientType.User
-  summary: <span data-ttu-id="d9772-108">指定收件人是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="d9772-108">Specifies that the recipient is an SMTP email address that is on the Exchange server.</span></span>
-  name: User
-  fullName: User
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"user\""
+      <span data-ttu-id="a1eff-102">\[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1eff-102">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    remarks: '<span data-ttu-id="a1eff-103">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="a1eff-103">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>'
+    name: Office.MailboxEnums.RecipientType
+    fullName: Office.MailboxEnums.RecipientType
+    langs:
+      - typeScript
+    type: enum
+    package: Outlook_1_4
+    children:
+      - Outlook_1_4.Office.MailboxEnums.RecipientType.DistributionList
+      - Outlook_1_4.Office.MailboxEnums.RecipientType.ExternalUser
+      - Outlook_1_4.Office.MailboxEnums.RecipientType.Other
+      - Outlook_1_4.Office.MailboxEnums.RecipientType.User
+  - uid: Outlook_1_4.Office.MailboxEnums.RecipientType.DistributionList
+    summary: <span data-ttu-id="a1eff-104">指定收件人是包含电子邮件地址列表的通讯组列表。</span><span class="sxs-lookup"><span data-stu-id="a1eff-104">Specifies that the recipient is a distribution list containing a list of email addresses.</span></span>
+    name: DistributionList
+    fullName: DistributionList
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"distributionList"'
+  - uid: Outlook_1_4.Office.MailboxEnums.RecipientType.ExternalUser
+    summary: <span data-ttu-id="a1eff-105">指定收件人是不在 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="a1eff-105">Specifies that the recipient is an SMTP email address that is not on the Exchange server.</span></span>
+    name: ExternalUser
+    fullName: ExternalUser
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"externalUser"'
+  - uid: Outlook_1_4.Office.MailboxEnums.RecipientType.Other
+    summary: <span data-ttu-id="a1eff-106">指定收件人不是其他收件人类型之一。</span><span class="sxs-lookup"><span data-stu-id="a1eff-106">Specifies that the recipient is not one of the other recipient types.</span></span>
+    name: Other
+    fullName: Other
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"other"'
+  - uid: Outlook_1_4.Office.MailboxEnums.RecipientType.User
+    summary: <span data-ttu-id="a1eff-107">指定收件人是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="a1eff-107">Specifies that the recipient is an SMTP email address that is on the Exchange server.</span></span>
+    name: User
+    fullName: User
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"user"'
