commit translated contents

--- a/docs/docs-ref-autogen/word/word.errorcodes.yml
+++ b/docs/docs-ref-autogen/word/word.errorcodes.yml
@@ -1,56 +1,50 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 91c1f2f5f4dfd3ab19c89b37e810552d715ffcfd
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26225474"
 items:
-- uid: word.Word.ErrorCodes
-  name: Word.ErrorCodes
-  fullName: Word.ErrorCodes
-  langs:
-  - typeScript
-  type: enum
-  package: word
-  children:
-  - word.Word.ErrorCodes.accessDenied
-  - word.Word.ErrorCodes.generalException
-  - word.Word.ErrorCodes.invalidArgument
-  - word.Word.ErrorCodes.itemNotFound
-  - word.Word.ErrorCodes.notImplemented
-- uid: word.Word.ErrorCodes.accessDenied
-  name: accessDenied
-  fullName: accessDenied
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"AccessDenied\""
-- uid: word.Word.ErrorCodes.generalException
-  name: generalException
-  fullName: generalException
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"GeneralException\""
-- uid: word.Word.ErrorCodes.invalidArgument
-  name: invalidArgument
-  fullName: invalidArgument
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"InvalidArgument\""
-- uid: word.Word.ErrorCodes.itemNotFound
-  name: itemNotFound
-  fullName: itemNotFound
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"ItemNotFound\""
-- uid: word.Word.ErrorCodes.notImplemented
-  name: notImplemented
-  fullName: notImplemented
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"NotImplemented\""
+  - uid: word.Word.ErrorCodes
+    name: Word.ErrorCodes
+    fullName: Word.ErrorCodes
+    langs:
+      - typeScript
+    type: enum
+    package: word
+    children:
+      - word.Word.ErrorCodes.accessDenied
+      - word.Word.ErrorCodes.generalException
+      - word.Word.ErrorCodes.invalidArgument
+      - word.Word.ErrorCodes.itemNotFound
+      - word.Word.ErrorCodes.notImplemented
+  - uid: word.Word.ErrorCodes.accessDenied
+    name: accessDenied
+    fullName: accessDenied
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"AccessDenied"'
+  - uid: word.Word.ErrorCodes.generalException
+    name: generalException
+    fullName: generalException
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"GeneralException"'
+  - uid: word.Word.ErrorCodes.invalidArgument
+    name: invalidArgument
+    fullName: invalidArgument
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"InvalidArgument"'
+  - uid: word.Word.ErrorCodes.itemNotFound
+    name: itemNotFound
+    fullName: itemNotFound
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"ItemNotFound"'
+  - uid: word.Word.ErrorCodes.notImplemented
+    name: notImplemented
+    fullName: notImplemented
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"NotImplemented"'
