--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.custompropertydata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.custompropertydata.yml
@@ -1,68 +1,59 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a6352c83988f2cc05e572f702859c11782fe3fc2
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105102"
 items:
-- uid: excel_release.Excel.Interfaces.CustomPropertyData
-  summary: 描述通过调用 "customProperty ()" 返回的数据的接口。
-  name: Excel.Interfaces.CustomPropertyData
-  fullName: Excel.Interfaces.CustomPropertyData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomPropertyData.key
-  - excel_release.Excel.Interfaces.CustomPropertyData.type
-  - excel_release.Excel.Interfaces.CustomPropertyData.value
-- uid: excel_release.Excel.Interfaces.CustomPropertyData.key
-  summary: >-
-    获取 customProperty 的键。 只读。
+  - uid: excel_release.Excel.Interfaces.CustomPropertyData
+    summary: 描述通过调用 "customProperty ()" 返回的数据的接口。
+    name: Excel.Interfaces.CustomPropertyData
+    fullName: Excel.Interfaces.CustomPropertyData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomPropertyData.key
+      - excel_release.Excel.Interfaces.CustomPropertyData.type
+      - excel_release.Excel.Interfaces.CustomPropertyData.value
+  - uid: excel_release.Excel.Interfaces.CustomPropertyData.key
+    summary: |-
+      获取 customProperty 的键。 只读。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: key
+    fullName: key
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'key?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.CustomPropertyData.type
+    summary: |-
+      获取自定义属性的值类型。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: key
-  fullName: key
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'key?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.CustomPropertyData.type
-  summary: >-
-    获取自定义属性的值类型。 只读。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.DocumentPropertyType | "Number" | "Boolean" | "Date" | "String" | "Float";'
+      return:
+        type:
+          - Excel.DocumentPropertyType | "Number" | "Boolean" | "Date" | "String" | "Float"
+  - uid: excel_release.Excel.Interfaces.CustomPropertyData.value
+    summary: |-
+      获取或设置 customProperty 的值。
 
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.DocumentPropertyType | "Number" | "Boolean" | "Date" | "String" | "Float";'
-    return:
-      type:
-      - Excel.DocumentPropertyType | "Number" | "Boolean" | "Date" | "String" | "Float"
-- uid: excel_release.Excel.Interfaces.CustomPropertyData.value
-  summary: >-
-    获取或设置自定义属性的值。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: any;'
-    return:
-      type:
-      - any
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: any;'
+      return:
+        type:
+          - any
