--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1e8fa3f10e38aa5b55a367ef8b266eee9bcb517b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116078"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionData
-  summary: 描述通过调用 "customXmlPartCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.CustomXmlPartCollectionData
-  fullName: Excel.Interfaces.CustomXmlPartCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartCollectionData.items
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
-    return:
-      type:
-      - Excel.Interfaces.CustomXmlPartData[]
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionData
+    summary: 描述通过调用 "customXmlPartCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.CustomXmlPartCollectionData
+    fullName: Excel.Interfaces.CustomXmlPartCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartCollectionData.items
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.CustomXmlPartData[]'
