--- a/docs/docs-ref-autogen/word/word.table.yml
+++ b/docs/docs-ref-autogen/word/word.table.yml
@@ -1345,6 +1345,7 @@ items:
         type:
           - Word.TableCollection
   - uid: word.Word.Table.toJSON
+    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Word 表对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Word.Interfaces.TableData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
     name: toJSON()
     fullName: toJSON()
     langs:
