--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.custompropertyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.custompropertyupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ee5a4901516243c6aef14344096d331946a51586
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107097"
 items:
-- uid: excel_release.Excel.Interfaces.CustomPropertyUpdateData
-  summary: <span data-ttu-id="89fdc-101">用于更新 CustomProperty 对象上的数据的接口, 用于在 "CustomProperty" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="89fdc-101">An interface for updating data on the CustomProperty object, for use in "customProperty.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.CustomPropertyUpdateData
-  fullName: Excel.Interfaces.CustomPropertyUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomPropertyUpdateData.value
-- uid: excel_release.Excel.Interfaces.CustomPropertyUpdateData.value
-  summary: >-
-    <span data-ttu-id="89fdc-102">获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="89fdc-102">Gets or sets the value of the custom property.</span></span>
+  - uid: excel_release.Excel.Interfaces.CustomPropertyUpdateData
+    summary: '<span data-ttu-id="d4297-101">一个用于更新 CustomProperty 对象上的数据的接口, 可用于 "CustomProperty (</span><span class="sxs-lookup"><span data-stu-id="d4297-101">An interface for updating data on the CustomProperty object, for use in "customProperty.set(</span></span><!-- --><span data-ttu-id="d4297-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="d4297-102"></span></span><!-- --><span data-ttu-id="d4297-103">)".</span><span class="sxs-lookup"><span data-stu-id="d4297-103"></span></span>'
+    name: Excel.Interfaces.CustomPropertyUpdateData
+    fullName: Excel.Interfaces.CustomPropertyUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomPropertyUpdateData.value
+  - uid: excel_release.Excel.Interfaces.CustomPropertyUpdateData.value
+    summary: |-
+      <span data-ttu-id="d4297-104">获取或设置 customProperty 的值。</span><span class="sxs-lookup"><span data-stu-id="d4297-104">Gets or sets the value of the custom property.</span></span>
 
-
-    <span data-ttu-id="89fdc-103">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-103">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: any;'
-    return:
-      type:
-      - any
+      <span data-ttu-id="d4297-105">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4297-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: any;'
+      return:
+        type:
+          - any
