--- a/docs/docs-ref-autogen/word/word.documentpropertytype.yml
+++ b/docs/docs-ref-autogen/word/word.documentpropertytype.yml
@@ -1,49 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 12fc1d727556736f821c52f4525a370fafa19c85
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26232663"
 items:
-- uid: word.Word.DocumentPropertyType
-  summary: '<span data-ttu-id="f9f72-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9f72-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
-  name: Word.DocumentPropertyType
-  fullName: Word.DocumentPropertyType
-  langs:
-  - typeScript
-  type: enum
-  package: word
-  children:
-  - word.Word.DocumentPropertyType.boolean
-  - word.Word.DocumentPropertyType.date
-  - word.Word.DocumentPropertyType.number
-  - word.Word.DocumentPropertyType.string
-- uid: word.Word.DocumentPropertyType.boolean
-  name: boolean
-  fullName: boolean
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"Boolean\""
-- uid: word.Word.DocumentPropertyType.date
-  name: date
-  fullName: date
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"Date\""
-- uid: word.Word.DocumentPropertyType.number
-  name: number
-  fullName: number
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"Number\""
-- uid: word.Word.DocumentPropertyType.string
-  name: string
-  fullName: string
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"String\""
+  - uid: word.Word.DocumentPropertyType
+    summary: '<span data-ttu-id="dac47-101">\[[API 集: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dac47-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    name: Word.DocumentPropertyType
+    fullName: Word.DocumentPropertyType
+    langs:
+      - typeScript
+    type: enum
+    package: word
+    children:
+      - word.Word.DocumentPropertyType.boolean
+      - word.Word.DocumentPropertyType.date
+      - word.Word.DocumentPropertyType.number
+      - word.Word.DocumentPropertyType.string
+  - uid: word.Word.DocumentPropertyType.boolean
+    name: boolean
+    fullName: boolean
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"Boolean"'
+  - uid: word.Word.DocumentPropertyType.date
+    name: date
+    fullName: date
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"Date"'
+  - uid: word.Word.DocumentPropertyType.number
+    name: number
+    fullName: number
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"Number"'
+  - uid: word.Word.DocumentPropertyType.string
+    name: string
+    fullName: string
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"String"'
