commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7815de0420faf396d98a776d19a720868d6269c7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113432"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions
-  summary: >-
-    表示工作簿中的自定义 XML 部件对象。
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions
+    summary: |-
+      表示工作簿中的自定义 XML 部件对象。
 
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.CustomXmlPartLoadOptions
+    fullName: Excel.Interfaces.CustomXmlPartLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
+    summary: |-
+      自定义 XML 部件的 ID。 只读。
 
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.CustomXmlPartLoadOptions
-  fullName: Excel.Interfaces.CustomXmlPartLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
-  summary: >-
-    自定义 XML 部件的 ID。只读。
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
+    summary: |-
+      自定义 XML 部件的命名空间 URI。 只读。
 
-
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
-  summary: >-
-    自定义 XML 部件的命名空间 URI。只读。
-
-
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: namespaceUri
-  fullName: namespaceUri
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'namespaceUri?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: namespaceUri
+    fullName: namespaceUri
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'namespaceUri?: boolean;'
+      return:
+        type:
+          - boolean
