--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.groupshapecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.groupshapecollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 117b92c8229267dee806b551801c48493bd11449
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115007"
 items:
-- uid: excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData
-  summary: 用于更新 GroupShapeCollection 对象上的数据的接口, 用于在 "GroupShapeCollection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.GroupShapeCollectionUpdateData
-  fullName: Excel.Interfaces.GroupShapeCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.ShapeData[];'
-    return:
-      type:
-      - Excel.Interfaces.ShapeData[]
+  - uid: excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData
+    summary: '一个用于更新 GroupShapeCollection 对象上的数据的接口, 可用于 "GroupShapeCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.GroupShapeCollectionUpdateData
+    fullName: Excel.Interfaces.GroupShapeCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.GroupShapeCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.ShapeData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.ShapeData[]'
