--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6a7cedf80c503e74095f60d0322e271f374ca39a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109379"
 items:
-- uid: excel_release.Excel.Interfaces.PageBreakCollectionUpdateData
-  summary: 用于更新 PageBreakCollection 对象上的数据的接口, 用于在 "PageBreakCollection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.PageBreakCollectionUpdateData
-  fullName: Excel.Interfaces.PageBreakCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.PageBreakCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.PageBreakCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.PageBreakData[];'
-    return:
-      type:
-      - Excel.Interfaces.PageBreakData[]
+  - uid: excel_release.Excel.Interfaces.PageBreakCollectionUpdateData
+    summary: '一个用于更新 PageBreakCollection 对象上的数据的接口, 可用于 "PageBreakCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.PageBreakCollectionUpdateData
+    fullName: Excel.Interfaces.PageBreakCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.PageBreakCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.PageBreakCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.PageBreakData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PageBreakData[]'
