--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.rangefilldata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.rangefilldata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e09455e89cf7705a2e0e8a7c99361eacfe416ae9
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113054"
 items:
-- uid: excel_release.Excel.Interfaces.RangeFillData
-  summary: 描述通过调用 "rangeFill ()" 返回的数据的接口。
-  name: Excel.Interfaces.RangeFillData
-  fullName: Excel.Interfaces.RangeFillData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.RangeFillData.color
-- uid: excel_release.Excel.Interfaces.RangeFillData.color
-  summary: >-
-    代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。
+  - uid: excel_release.Excel.Interfaces.RangeFillData
+    summary: 描述通过调用 "rangeFill ()" 返回的数据的接口。
+    name: Excel.Interfaces.RangeFillData
+    fullName: Excel.Interfaces.RangeFillData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RangeFillData.color
+  - uid: excel_release.Excel.Interfaces.RangeFillData.color
+    summary: |-
+      代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。
 
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
