--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartscopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartscopedcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5e354827cc4a177d186c5f8756c2f4beb78e48fb
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105382"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
-  summary: 用于更新 CustomXmlPartScopedCollection 对象上的数据的接口, 用于在 "CustomXmlPartScopedCollection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
-  fullName: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
-    return:
-      type:
-      - Excel.Interfaces.CustomXmlPartData[]
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
+    summary: '一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口, 可用于 "CustomXmlPartScopedCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
+    fullName: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.CustomXmlPartData[]'
