--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a4c447c5900533bcdb837475ba1b4c54a13a29f7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115070"
 items:
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData
-  summary: 描述通过调用 "dataPivotHierarchyCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.DataPivotHierarchyCollectionData
-  fullName: Excel.Interfaces.DataPivotHierarchyCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData.items
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.DataPivotHierarchyData[]
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData
+    summary: 描述通过调用 "dataPivotHierarchyCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.DataPivotHierarchyCollectionData
+    fullName: Excel.Interfaces.DataPivotHierarchyCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData.items
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.DataPivotHierarchyData[]'
