--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchyupdatedata.yml
@@ -1,119 +1,107 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b0cf3bbf4e0457f2c170faff843548c70eaeabab
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117707"
 items:
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData
-  summary: 用于更新 DataPivotHierarchy 对象上的数据的接口, 用于在 "DataPivotHierarchy" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.DataPivotHierarchyUpdateData
-  fullName: Excel.Interfaces.DataPivotHierarchyUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.field
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.name
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.numberFormat
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.position
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.showAs
-  - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.summarizeBy
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.field
-  summary: >-
-    返回与 DataPivotHierarchy 相关联的 PivotFields。
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData
+    summary: '一个用于更新 DataPivotHierarchy 对象上的数据的接口, 可用于 "DataPivotHierarchy (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.DataPivotHierarchyUpdateData
+    fullName: Excel.Interfaces.DataPivotHierarchyUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.field
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.name
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.numberFormat
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.position
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.showAs
+      - excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.summarizeBy
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.field
+    summary: |-
+      返回与 DataPivotHierarchy 相关联的 PivotFields。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: field
+    fullName: field
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'field?: Excel.Interfaces.PivotFieldUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.PivotFieldUpdateData
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.name
+    summary: |-
+      DataPivotHierarchy 的名称。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: field
-  fullName: field
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'field?: Excel.Interfaces.PivotFieldUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.PivotFieldUpdateData
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.name
-  summary: >-
-    DataPivotHierarchy 的名称。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.numberFormat
+    summary: |-
+      DataPivotHierarchy 的数字格式。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: numberFormat
+    fullName: numberFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormat?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.position
+    summary: |-
+      DataPivotHierarchy 的位置。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.numberFormat
-  summary: >-
-    DataPivotHierarchy 的数字格式。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.showAs
+    summary: |-
+      确定数据是否应显示为特定计算汇总。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showAs
+    fullName: showAs
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showAs?: Excel.ShowAsRule;'
+      return:
+        type:
+          - excel.Excel.ShowAsRule
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.summarizeBy
+    summary: |-
+      确定是否显示 DataPivotHierarchy 的所有项。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: numberFormat
-  fullName: numberFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'numberFormat?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.position
-  summary: >-
-    DataPivotHierarchy 的位置。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.showAs
-  summary: >-
-    确定数据是否应显示为特定计算汇总。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showAs
-  fullName: showAs
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showAs?: Excel.ShowAsRule;'
-    return:
-      type:
-      - excel.Excel.ShowAsRule
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyUpdateData.summarizeBy
-  summary: >-
-    确定是否显示 DataPivotHierarchy 的所有项。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: summarizeBy
-  fullName: summarizeBy
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'summarizeBy?: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP";'
-    return:
-      type:
-      - Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: summarizeBy
+    fullName: summarizeBy
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'summarizeBy?: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP";'
+      return:
+        type:
+          - Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"
