--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.groupshapecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.groupshapecollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4ad6e8cef1c4a08f5a25b7e6c6c52c6811c416d5
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107979"
 items:
-- uid: excel_release.Excel.Interfaces.GroupShapeCollectionData
-  summary: 描述通过调用 "groupShapeCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.GroupShapeCollectionData
-  fullName: Excel.Interfaces.GroupShapeCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.GroupShapeCollectionData.items
-- uid: excel_release.Excel.Interfaces.GroupShapeCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.ShapeData[];'
-    return:
-      type:
-      - Excel.Interfaces.ShapeData[]
+  - uid: excel_release.Excel.Interfaces.GroupShapeCollectionData
+    summary: 描述通过调用 "groupShapeCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.GroupShapeCollectionData
+    fullName: Excel.Interfaces.GroupShapeCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.GroupShapeCollectionData.items
+  - uid: excel_release.Excel.Interfaces.GroupShapeCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.ShapeData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.ShapeData[]'
