commit bilingual contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterdata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 26131acaa05afb496d7ff86c8b447e3a0f791e77
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108861"
 items:
-- uid: excel_release.Excel.Interfaces.FilterData
-  summary: <span data-ttu-id="4c05a-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="4c05a-101">An interface describing the data returned by calling "filter.toJSON()".</span></span>
-  name: Excel.Interfaces.FilterData
-  fullName: Excel.Interfaces.FilterData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterData.criteria
-- uid: excel_release.Excel.Interfaces.FilterData.criteria
-  summary: >-
-    <span data-ttu-id="4c05a-p101">给定列上当前应用的筛选器。只读。</span><span class="sxs-lookup"><span data-stu-id="4c05a-p101">The currently applied filter on the given column. Read-only.</span></span>
+  - uid: excel_release.Excel.Interfaces.FilterData
+    summary: <span data-ttu-id="f8cbc-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f8cbc-101">An interface describing the data returned by calling "filter.toJSON()".</span></span>
+    name: Excel.Interfaces.FilterData
+    fullName: Excel.Interfaces.FilterData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterData.criteria
+  - uid: excel_release.Excel.Interfaces.FilterData.criteria
+    summary: |-
+      <span data-ttu-id="f8cbc-102">给定列上当前应用的筛选器。</span><span class="sxs-lookup"><span data-stu-id="f8cbc-102">The currently applied filter on the given column.</span></span> <span data-ttu-id="f8cbc-103">只读。</span><span class="sxs-lookup"><span data-stu-id="f8cbc-103">Read-only.</span></span>
 
-
-    <span data-ttu-id="4c05a-104">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c05a-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.FilterCriteria;'
-    return:
-      type:
-      - excel.Excel.FilterCriteria
+      <span data-ttu-id="f8cbc-104">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8cbc-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.FilterCriteria;'
+      return:
+        type:
+          - excel.Excel.FilterCriteria
