--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7815de0420faf396d98a776d19a720868d6269c7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113432"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions
-  summary: >-
-    <span data-ttu-id="cdd92-101">表示工作簿中的自定义 XML 部件对象。</span><span class="sxs-lookup"><span data-stu-id="cdd92-101">Represents a custom XML part object in a workbook.</span></span>
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions
+    summary: |-
+      <span data-ttu-id="4d016-101">表示工作簿中的自定义 XML 部件对象。</span><span class="sxs-lookup"><span data-stu-id="4d016-101">Represents a custom XML part object in a workbook.</span></span>
 
+      <span data-ttu-id="4d016-102">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4d016-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.CustomXmlPartLoadOptions
+    fullName: Excel.Interfaces.CustomXmlPartLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
+      - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
+    summary: |-
+      <span data-ttu-id="4d016-103">自定义 XML 部件的 ID。</span><span class="sxs-lookup"><span data-stu-id="4d016-103">The custom XML part's ID.</span></span> <span data-ttu-id="4d016-104">只读。</span><span class="sxs-lookup"><span data-stu-id="4d016-104">Read-only.</span></span>
 
-    <span data-ttu-id="cdd92-102">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cdd92-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.CustomXmlPartLoadOptions
-  fullName: Excel.Interfaces.CustomXmlPartLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
-  - excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.id
-  summary: >-
-    <span data-ttu-id="cdd92-p101">自定义 XML 部件的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="cdd92-p101">The custom XML part's ID. Read-only.</span></span>
+      <span data-ttu-id="4d016-105">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4d016-105">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
+    summary: |-
+      <span data-ttu-id="4d016-106">自定义 XML 部件的命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="4d016-106">The custom XML part's namespace URI.</span></span> <span data-ttu-id="4d016-107">只读。</span><span class="sxs-lookup"><span data-stu-id="4d016-107">Read-only.</span></span>
 
-
-    <span data-ttu-id="cdd92-105">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cdd92-105">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartLoadOptions.namespaceUri
-  summary: >-
-    <span data-ttu-id="cdd92-p102">自定义 XML 部件的命名空间 URI。只读。</span><span class="sxs-lookup"><span data-stu-id="cdd92-p102">The custom XML part's namespace URI. Read-only.</span></span>
-
-
-    <span data-ttu-id="cdd92-108">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cdd92-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: namespaceUri
-  fullName: namespaceUri
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'namespaceUri?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="4d016-108">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4d016-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: namespaceUri
+    fullName: namespaceUri
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'namespaceUri?: boolean;'
+      return:
+        type:
+          - boolean
