--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 352573ca35db56d34ce9ff5493a5300443e7201b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111682"
 items:
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
-  summary: <span data-ttu-id="2bb11-101">用于更新 DataPivotHierarchyCollection 对象上的数据的接口, 用于在 "DataPivotHierarchyCollection" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="2bb11-101">An interface for updating data on the DataPivotHierarchyCollection object, for use in "dataPivotHierarchyCollection.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
-  fullName: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.DataPivotHierarchyData[]
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
+    summary: '<span data-ttu-id="8e8f7-101">一个用于更新 DataPivotHierarchyCollection 对象上的数据的接口, 可用于 "DataPivotHierarchyCollection (</span><span class="sxs-lookup"><span data-stu-id="8e8f7-101">An interface for updating data on the DataPivotHierarchyCollection object, for use in "dataPivotHierarchyCollection.set(</span></span><!-- --><span data-ttu-id="8e8f7-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="8e8f7-102"></span></span><!-- --><span data-ttu-id="8e8f7-103">)".</span><span class="sxs-lookup"><span data-stu-id="8e8f7-103"></span></span>'
+    name: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
+    fullName: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.DataPivotHierarchyData[]'
