--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3f595cdaffaf362f1bc1cdb27afa84abb3a392f5
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108000"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionData
-  summary: <span data-ttu-id="3256d-101">描述通过调用 "namedItemCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3256d-101">An interface describing the data returned by calling "namedItemCollection.toJSON()".</span></span>
-  name: Excel.Interfaces.NamedItemCollectionData
-  fullName: Excel.Interfaces.NamedItemCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemCollectionData.items
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.NamedItemData[];'
-    return:
-      type:
-      - Excel.Interfaces.NamedItemData[]
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionData
+    summary: <span data-ttu-id="48d82-101">描述通过调用 "namedItemCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="48d82-101">An interface describing the data returned by calling "namedItemCollection.toJSON()".</span></span>
+    name: Excel.Interfaces.NamedItemCollectionData
+    fullName: Excel.Interfaces.NamedItemCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemCollectionData.items
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.NamedItemData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.NamedItemData[]'
