--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemupdatedata.yml
@@ -1,68 +1,59 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 71291d9ea3465013c17c34caa545f5f31c9d5c5f
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113439"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemUpdateData
-  summary: <span data-ttu-id="b3678-101">用于更新 NamedItem 对象上的数据的接口, 用于在 "NamedItem" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="b3678-101">An interface for updating data on the NamedItem object, for use in "namedItem.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.NamedItemUpdateData
-  fullName: Excel.Interfaces.NamedItemUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemUpdateData.comment
-  - excel_release.Excel.Interfaces.NamedItemUpdateData.formula
-  - excel_release.Excel.Interfaces.NamedItemUpdateData.visible
-- uid: excel_release.Excel.Interfaces.NamedItemUpdateData.comment
-  summary: >-
-    <span data-ttu-id="b3678-102">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="b3678-102">Represents the comment associated with this name.</span></span>
+  - uid: excel_release.Excel.Interfaces.NamedItemUpdateData
+    summary: '<span data-ttu-id="0ecc1-101">一个用于更新 NamedItem 对象上的数据的接口, 可用于 "NamedItem (</span><span class="sxs-lookup"><span data-stu-id="0ecc1-101">An interface for updating data on the NamedItem object, for use in "namedItem.set(</span></span><!-- --><span data-ttu-id="0ecc1-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="0ecc1-102"></span></span><!-- --><span data-ttu-id="0ecc1-103">)".</span><span class="sxs-lookup"><span data-stu-id="0ecc1-103"></span></span>'
+    name: Excel.Interfaces.NamedItemUpdateData
+    fullName: Excel.Interfaces.NamedItemUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemUpdateData.comment
+      - excel_release.Excel.Interfaces.NamedItemUpdateData.formula
+      - excel_release.Excel.Interfaces.NamedItemUpdateData.visible
+  - uid: excel_release.Excel.Interfaces.NamedItemUpdateData.comment
+    summary: |-
+      <span data-ttu-id="0ecc1-104">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="0ecc1-104">Represents the comment associated with this name.</span></span>
 
+      <span data-ttu-id="0ecc1-105">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0ecc1-105">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: comment
+    fullName: comment
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'comment?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.NamedItemUpdateData.formula
+    summary: |-
+      <span data-ttu-id="0ecc1-106">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="0ecc1-106">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="0ecc1-107">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="0ecc1-107">Formula always starts with a '=' sign.</span></span>
 
-    <span data-ttu-id="b3678-103">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3678-103">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: comment
-  fullName: comment
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'comment?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.NamedItemUpdateData.formula
-  summary: >-
-    <span data-ttu-id="b3678-104">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="b3678-104">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="b3678-105">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="b3678-105">Formula always starts with a '=' sign.</span></span>
+      <span data-ttu-id="0ecc1-108">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0ecc1-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: any;'
+      return:
+        type:
+          - any
+  - uid: excel_release.Excel.Interfaces.NamedItemUpdateData.visible
+    summary: |-
+      <span data-ttu-id="0ecc1-109">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="0ecc1-109">Specifies whether the object is visible or not.</span></span>
 
-
-    <span data-ttu-id="b3678-106">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3678-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: any;'
-    return:
-      type:
-      - any
-- uid: excel_release.Excel.Interfaces.NamedItemUpdateData.visible
-  summary: >-
-    <span data-ttu-id="b3678-107">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="b3678-107">Specifies whether the object is visible or not.</span></span>
-
-
-    <span data-ttu-id="b3678-108">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3678-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="0ecc1-110">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0ecc1-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
