--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pivotfieldcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pivotfieldcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9f61fd5bbc46c28b6255299ffab7c0b2576e832e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106096"
 items:
-- uid: excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData
-  summary: <span data-ttu-id="6138a-101">用于更新 PivotFieldCollection 对象上的数据的接口, 用于在 "PivotFieldCollection" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="6138a-101">An interface for updating data on the PivotFieldCollection object, for use in "pivotFieldCollection.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.PivotFieldCollectionUpdateData
-  fullName: Excel.Interfaces.PivotFieldCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.PivotFieldData[];'
-    return:
-      type:
-      - Excel.Interfaces.PivotFieldData[]
+  - uid: excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData
+    summary: '<span data-ttu-id="9a905-101">一个用于更新 PivotFieldCollection 对象上的数据的接口, 可用于 "PivotFieldCollection (</span><span class="sxs-lookup"><span data-stu-id="9a905-101">An interface for updating data on the PivotFieldCollection object, for use in "pivotFieldCollection.set(</span></span><!-- --><span data-ttu-id="9a905-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="9a905-102"></span></span><!-- --><span data-ttu-id="9a905-103">)".</span><span class="sxs-lookup"><span data-stu-id="9a905-103"></span></span>'
+    name: Excel.Interfaces.PivotFieldCollectionUpdateData
+    fullName: Excel.Interfaces.PivotFieldCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.PivotFieldCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.PivotFieldData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PivotFieldData[]'
