commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ef7f08f75bfb9ffb73d2972e8b8e6d3d48bbdfe6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112431"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartData
-  summary: 描述通过调用 "customXmlPart ()" 返回的数据的接口。
-  name: Excel.Interfaces.CustomXmlPartData
-  fullName: Excel.Interfaces.CustomXmlPartData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartData.id
-  - excel_release.Excel.Interfaces.CustomXmlPartData.namespaceUri
-- uid: excel_release.Excel.Interfaces.CustomXmlPartData.id
-  summary: >-
-    自定义 XML 部件的 ID。只读。
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartData
+    summary: 描述通过调用 "customXmlPart ()" 返回的数据的接口。
+    name: Excel.Interfaces.CustomXmlPartData
+    fullName: Excel.Interfaces.CustomXmlPartData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartData.id
+      - excel_release.Excel.Interfaces.CustomXmlPartData.namespaceUri
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartData.id
+    summary: |-
+      自定义 XML 部件的 ID。 只读。
 
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartData.namespaceUri
+    summary: |-
+      自定义 XML 部件的命名空间 URI。 只读。
 
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.CustomXmlPartData.namespaceUri
-  summary: >-
-    自定义 XML 部件的命名空间 URI。只读。
-
-
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: namespaceUri
-  fullName: namespaceUri
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'namespaceUri?: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: namespaceUri
+    fullName: namespaceUri
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'namespaceUri?: string;'
+      return:
+        type:
+          - string
