--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.functionresultdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.functionresultdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4a6b2b5a7dc4b3d0da227a523fca88a2eeb7f460
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107846"
 items:
-- uid: excel_release.Excel.Interfaces.FunctionResultData
-  summary: 描述通过调用 "functionResult ()" 返回的数据的接口。
-  name: Excel.Interfaces.FunctionResultData
-  fullName: Excel.Interfaces.FunctionResultData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FunctionResultData.error
-  - excel_release.Excel.Interfaces.FunctionResultData.value
-- uid: excel_release.Excel.Interfaces.FunctionResultData.error
-  summary: >-
-    表示错误的错误值 (\#如 "DIV/0")。 如果未设置错误字符串, 则函数成功, 并将其结果写入值字段。 该错误始终位于英语区域设置中。
+  - uid: excel_release.Excel.Interfaces.FunctionResultData
+    summary: 描述通过调用 "functionResult ()" 返回的数据的接口。
+    name: Excel.Interfaces.FunctionResultData
+    fullName: Excel.Interfaces.FunctionResultData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FunctionResultData.error
+      - excel_release.Excel.Interfaces.FunctionResultData.value
+  - uid: excel_release.Excel.Interfaces.FunctionResultData.error
+    summary: |-
+      表示错误的错误值 (\#如 "DIV/0")。 如果未设置错误字符串, 则函数成功, 并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: error
+    fullName: error
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'error?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.FunctionResultData.value
+    summary: |-
+      函数计算的值。 仅当未发生错误 (即, 未设置 error 属性) 时, 才会填充 "值" 字段。
 
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: error
-  fullName: error
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'error?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.FunctionResultData.value
-  summary: >-
-    函数计算的值。 仅当未发生错误 (即, 未设置 error 属性) 时, 才会填充 "值" 字段。
-
-
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: T;'
-    return:
-      type:
-      - T
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: T;'
+      return:
+        type:
+          - T
