--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dd7248e4d55d9cbe1f0e84ceafcb68bbf7ff6357
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106201"
 items:
-- uid: excel_release.Excel.Interfaces.PageBreakCollectionData
-  summary: 描述通过调用 "pageBreakCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.PageBreakCollectionData
-  fullName: Excel.Interfaces.PageBreakCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.PageBreakCollectionData.items
-- uid: excel_release.Excel.Interfaces.PageBreakCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.PageBreakData[];'
-    return:
-      type:
-      - Excel.Interfaces.PageBreakData[]
+  - uid: excel_release.Excel.Interfaces.PageBreakCollectionData
+    summary: 描述通过调用 "pageBreakCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.PageBreakCollectionData
+    fullName: Excel.Interfaces.PageBreakCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.PageBreakCollectionData.items
+  - uid: excel_release.Excel.Interfaces.PageBreakCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.PageBreakData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PageBreakData[]'
