--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemarrayvaluesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemarrayvaluesloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 25269177b34d180973ce7bfeb6cb721239d0619e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109869"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions
-  summary: >-
-    表示一个包含已命名项目的值和类型的对象。
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions
+    summary: |-
+      表示一个包含已命名项目的值和类型的对象。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.NamedItemArrayValuesLoadOptions
+    fullName: Excel.Interfaces.NamedItemArrayValuesLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.$all
+      - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.types
+      - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.values
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.types
+    summary: |-
+      表示已命名项目数组中每个项目的类型
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.NamedItemArrayValuesLoadOptions
-  fullName: Excel.Interfaces.NamedItemArrayValuesLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.$all
-  - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.types
-  - excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.values
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.types
-  summary: >-
-    表示已命名项目数组中每个项目的类型
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: types
+    fullName: types
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'types?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.values
+    summary: |-
+      表示已命名项目数组中每个项目的值。
 
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: types
-  fullName: types
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'types?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesLoadOptions.values
-  summary: >-
-    表示已命名项目数组中每个项目的值。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: values
-  fullName: values
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'values?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: values
+    fullName: values
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'values?: boolean;'
+      return:
+        type:
+          - boolean
