--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.rangecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.rangecollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3605c7e146bfb32afb0e65d23bc2d852fa7f939f
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115084"
 items:
-- uid: excel_release.Excel.Interfaces.RangeCollectionUpdateData
-  summary: 用于更新 RangeCollection 对象上的数据的接口, 用于在 "RangeCollection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.RangeCollectionUpdateData
-  fullName: Excel.Interfaces.RangeCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.RangeCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.RangeCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.RangeData[];'
-    return:
-      type:
-      - Excel.Interfaces.RangeData[]
+  - uid: excel_release.Excel.Interfaces.RangeCollectionUpdateData
+    summary: '一个用于更新 RangeCollection 对象上的数据的接口, 可用于 "RangeCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.RangeCollectionUpdateData
+    fullName: Excel.Interfaces.RangeCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RangeCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.RangeCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.RangeData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.RangeData[]'
