--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.rangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.rangefillupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ee0755fff21942915fd57f07e5f09498e881fd0c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109757"
 items:
-- uid: excel_release.Excel.Interfaces.RangeFillUpdateData
-  summary: 用于更新 RangeFill 对象上的数据的接口, 用于在 "RangeFill" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.RangeFillUpdateData
-  fullName: Excel.Interfaces.RangeFillUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.RangeFillUpdateData.color
-- uid: excel_release.Excel.Interfaces.RangeFillUpdateData.color
-  summary: >-
-    代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。
+  - uid: excel_release.Excel.Interfaces.RangeFillUpdateData
+    summary: '一个用于更新 RangeFill 对象上的数据的接口, 可用于 "RangeFill (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.RangeFillUpdateData
+    fullName: Excel.Interfaces.RangeFillUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RangeFillUpdateData.color
+  - uid: excel_release.Excel.Interfaces.RangeFillUpdateData.color
+    summary: |-
+      代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。
 
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
